# livekit-ai-voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VOBIZ_SETUP.md  benchmark.py  docker-compose-dev.yml  docker-compose.yml  ivr_webhook.py  livekit.yaml  playit  pyproject.toml  requirements.txt  setup.sh
.claude/: launch.json
backend/: .dockerignore  Dockerfile  agent.py  pyproject.toml
backend/app/: config.py  db.py  log_buffer.py  main.py  seed_data.py
backend/app/gemini/: README.md  agent_tools.py  agents.py
backend/app/gemini/ambience/: __init__.py  mixer.py  registry.py  synth.py
backend/app/gemini/kb/: __init__.py  chunking.py  embeddings.py  extract.py  pipeline.py  search.py
backend/app/gemini/models/: agent.py  call_log.py  kb.py  tool.py
backend/app/gemini/routes/: agents.py  ambience.py  call.py  calls.py  google_calendar.py  kb.py  tata_bridge.py  tools.py  twilio_bridge.py  vobiz_bridge.py  voice_samples.py
backend/app/gemini/services/: agents_store.py  google_calendar.py  logger.py  pricing.py  recorder.py  sentiment.py  tools_runtime.py  transfer.py  whatsapp.py
backend/app/models/: __init__.py  admin_setting.py  api_key.py  call_session.py  gemini_call_log.py  model_entry.py  user.py
backend/app/routes/: admin_route.py  auth.py  config_routes.py  fx_route.py  gemini_call.py  gemini_calls.py  internal_route.py  models_route.py  setup_route.py  token_route.py  tts_route.py  twilio_bridge.py  ultravox.py  vobiz_bridge.py  voice_samples.py  whatsapp.py
backend/app/schemas/: auth.py  config.py  model.py
backend/app/services/: auth.py  encryption.py  gemini_logger.py  livekit_svc.py  model_setup.py  model_sync.py  room_config_cache.py
backend/app/ultravox/routes/: ultravox.py
backend/scripts/: gemini_live_probe.py  seed_use_cases.py  vobiz_outbound_test.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: audio-capture-worklet.js  human.glb
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/AdminPanel/: index.tsx
frontend/src/components/CallInterface/: SetupReadyModal.tsx  index.tsx
frontend/src/components/ConfigModal/: index.tsx
frontend/src/components/CostEstimator/: index.tsx
frontend/src/components/GeminiAvatar/: index.tsx
frontend/src/components/GeminiCall/: index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/MetricsPanel/: index.tsx
frontend/src/components/TranscriptPanel/: index.tsx
frontend/src/components/UltravoxCall/: index.tsx
frontend/src/hooks/: useGeminiVoice.ts
frontend/src/lib/: theme.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  GeminiPage.tsx  Login.tsx  UltravoxPage.tsx
frontend/src/store/: authStore.ts  callStore.ts  modelStore.ts  uiStore.ts
scripts/: validate_env.py  voicebox_add_voices.py  voicebox_bootstrap.py
src/: agent.py  token_server.py
web/: app.js  index.html  styles.css
whatsapp/: Dockerfile  server-ultravox.js
