[tool.uv]
constraint-dependencies = ["onnxruntime<1.24"]

[project]
name = "livekit-ai-voice-agent"
version = "0.1.0"
description = "AI Voice Agent powered by LiveKit and Anthropic"
requires-python = ">=3.10,<3.15"
dependencies = [
    "livekit-agents[openai,silero,turn-detector,anthropic]~=1.3",
    "python-dotenv>=1.0",
]
