[tool.uv]
constraint-dependencies = ["onnxruntime<1.24", "numpy<2", "transformers<5"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project]
name = "livekit-ai-voice-agent"
version = "0.1.0"
description = "AI Voice Agent - fully local with Ollama, Whisper, and Piper TTS"
requires-python = ">=3.10,<3.15"
dependencies = [
    "livekit-agents[openai,silero,turn-detector]~=1.3",
    "python-dotenv>=1.0",
    "edge-tts>=7.0",
    "torch<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
cloud = [
    "livekit-plugins-anthropic>=1.5",
    "livekit-plugins-deepgram>=1.5",
    # Microsoft Azure Cognitive Services (official Neural TTS + STT).
    # Pulls azure-cognitiveservices-speech (native binary) as transitive dep.
    "livekit-plugins-azure>=1.5",
]
